--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: n3r
-Title: What the Package Does (One Line, Title Case)
+Title: Internal package for N3's oft-used functions
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Sushmita",
+           family = "V Gopalan",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "sushmitavgopalan@gmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: Internal package for N3's oft-used functions
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
